fix gaps

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,16 +1,6 @@
 .container {
   display: grid; 
-  gap: 0px var(--xs); 
 }
-  .is-l {
-    gap: 0px var(--sm); 
-  }
-  .no-gap {
-    gap:  0;
-  }
-  .gap-2-0 {
-    gap: 2px 0;
-  }
 
 .container--1 {
   grid-template-columns: 1fr; 
